Change input_net_dir to input_network_dr

--- a/Tutorial #1 - Simple Network, Single Trip.ipynb
+++ b/Tutorial #1 - Simple Network, Single Trip.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -143,13 +143,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2017-05-04 13:16:24 [INFO/MainProcess] Reading configuration file /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/input/demand-single/config_ft.txt\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Reading GTFS schedule\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read       6           stops from                 stops.txt,              stops_ft.txt\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read       3          routes from                routes.txt,             routes_ft.txt\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read       1        agencies from                agency.txt\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read       0 fare attributes from       fare_attributes.txt\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read       0      fare rules from            fare_rules.txt,       fare_periods_ft.txt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "routes_ft.txt\n",
+      "The file named routes_ft.txt was not expected.\n",
+      "This may be a misspelled file name or the file may be included in a\n",
+      "subdirectory. Please check spellings and make sure that there are no\n",
+      "subdirectories within the feed\n",
+      "transfers_ft.txt\n",
+      "The file named transfers_ft.txt was not expected.\n",
+      "This may be a misspelled file name or the file may be included in a\n",
+      "subdirectory. Please check spellings and make sure that there are no\n",
+      "subdirectories within the feed\n",
+      "trips_ft.txt\n",
+      "The file named trips_ft.txt was not expected.\n",
+      "This may be a misspelled file name or the file may be included in a\n",
+      "subdirectory. Please check spellings and make sure that there are no\n",
+      "subdirectories within the feed\n",
+      "vehicles_ft.txt\n",
+      "The file named vehicles_ft.txt was not expected.\n",
+      "This may be a misspelled file name or the file may be included in a\n",
+      "subdirectory. Please check spellings and make sure that there are no\n",
+      "subdirectories within the feed\n",
+      "walk_access_ft.txt\n",
+      "The file named walk_access_ft.txt was not expected.\n",
+      "This may be a misspelled file name or the file may be included in a\n",
+      "subdirectory. Please check spellings and make sure that there are no\n",
+      "subdirectories within the feed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read       2       transfers from             transfers.txt,          transfers_ft.txt\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read       1        vehicles from           vehicles_ft.txt\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read       9           trips from                 trips.txt,              trips_ft.txt\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read       1 service periods from              calendar.txt\n",
+      "2017-05-04 13:16:24 [WARNING/MainProcess] Adding shape_dist_traveled in miles\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read      18      stop times from            stop_times.txt,         stop_times_ft.txt\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read       3     walk access from        walk_access_ft.txt\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read       0            DAPs from drive_access_points_ft.txt\n",
+      "2017-05-04 13:16:24 [WARNING/MainProcess] The following 3 stop ids have no walk access: \n",
+      "  stop_id  taz\n",
+      "1       B  NaN\n",
+      "2      B1  NaN\n",
+      "3      B2  NaN\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] -------- Reading demand --------\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Capacity constraint? 0\n",
+      "2017-05-04 13:16:24 [INFO/MainProcess] Read       1    person trips from             trip_list.txt\n",
+      "2017-05-04 13:16:25 [INFO/MainProcess] Read       4         persons from                person.txt\n",
+      "2017-05-04 13:16:25 [INFO/MainProcess] Read       3      households from             household.txt\n",
+      "2017-05-04 13:16:25 [INFO/MainProcess] Have 1 person trips\n",
+      "2017-05-04 13:16:25 [INFO/MainProcess] Wrote veh_trips_df dataframe to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/veh_trips.csv\n",
+      "2017-05-04 13:16:25 [INFO/MainProcess] ***************************** ITERATION 1 PATHFINDING ITERATION 1 **************************************\n",
+      "2017-05-04 13:16:25 [INFO/MainProcess] **************************** GENERATING PATHS **********************************************************\n",
+      "2017-05-04 13:16:25 [INFO/MainProcess] Finding pathsets for 1 trips\n",
+      "/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/working/fast-trips/fasttrips/Assignment.py:820: FutureWarning: to_datetime is deprecated. Use self.to_pydatetime()\n",
+      "  trip_pathset = PathSet(path_dict)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRACE "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2017-05-04 13:16:26 [INFO/MainProcess]       1 paths sought,      1 paths found of 1 paths total.  Time elapsed:  0h: 0m: 0s\n",
+      "2017-05-04 13:16:26 [INFO/MainProcess] Finished finding      1 passenger paths.  Time elapsed:  0h: 0m: 0s\n",
+      "2017-05-04 13:16:26 [INFO/MainProcess] Wrote pathset_paths_df dataframe to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/pathsfound_paths.csv\n",
+      "2017-05-04 13:16:26 [INFO/MainProcess] Wrote pathset_links_df dataframe to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/pathsfound_links.csv\n",
+      "2017-05-04 13:16:26 [INFO/MainProcess] Wrote performance_df dataframe to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/ft_output_performance.csv\n",
+      "2017-05-04 13:16:26 [INFO/MainProcess] ***************************** ITERATION 1 PATHFINDING ITERATION 1 *** SIMULATING ***********************\n",
+      "2017-05-04 13:16:26 [INFO/MainProcess] Simulation Iteration 0\n",
+      "2017-05-04 13:16:26 [INFO/MainProcess]   Step 1. Find out board/alight times for all pathset links from vehicle times\n",
+      "2017-05-04 13:16:26 [INFO/MainProcess]   Step 2. Flag missed transfer links and paths in the pathsets\n",
+      "2017-05-04 13:16:26 [INFO/MainProcess]           flag_missed_transfers found 0 missed transfer trip legs for 0 paths\n",
+      "2017-05-04 13:16:26 [INFO/MainProcess]   Step 3. Calculate costs and probabilities for all pathset paths\n",
+      "2017-05-04 13:16:26 [INFO/MainProcess]           Adding fares to pathset\n",
+      "2017-05-04 13:16:28 [INFO/MainProcess]   Step 4. Choose a path for each passenger from their pathset\n",
+      "2017-05-04 13:16:28 [INFO/MainProcess]           Have      1 total passenger-trips, with      0 chosen paths,      0 fully rejected and      1 needing a choice\n",
+      "2017-05-04 13:16:28 [INFO/MainProcess]           Chose 1 out of 1 paths from the pathsets => total chosen 1\n",
+      "2017-05-04 13:16:28 [INFO/MainProcess]   Step 5. Put passenger paths on transit vehicles to get vehicle boards/alights/load and assess capacity constraints\n",
+      "2017-05-04 13:16:28 [INFO/MainProcess]   Step 5.1 Put passengers on transit vehicles.\n",
+      "2017-05-04 13:16:28 [INFO/MainProcess]   Step 6. Update dwell and travel times for transit vehicles\n",
+      "2017-05-04 13:16:28 [INFO/MainProcess] Simulation Iteration 1\n",
+      "2017-05-04 13:16:28 [INFO/MainProcess]   Step 1. Find out board/alight times for all pathset links from vehicle times\n",
+      "2017-05-04 13:16:28 [INFO/MainProcess]   Step 2. Flag missed transfer links and paths in the pathsets\n",
+      "2017-05-04 13:16:28 [INFO/MainProcess]           flag_missed_transfers found 0 missed transfer trip legs for 0 paths\n",
+      "2017-05-04 13:16:28 [INFO/MainProcess]   Step 3. Calculate costs and probabilities for all pathset paths\n",
+      "2017-05-04 13:16:29 [INFO/MainProcess]           Adding fares to pathset\n",
+      "2017-05-04 13:16:29 [INFO/MainProcess]   Step 4. Choose a path for each passenger from their pathset\n",
+      "2017-05-04 13:16:29 [INFO/MainProcess]           Rejecting 0 previously chosen paths for huge costs\n",
+      "2017-05-04 13:16:29 [INFO/MainProcess]           Have      1 total passenger-trips, with      1 chosen paths,      0 fully rejected and      0 needing a choice\n",
+      "2017-05-04 13:16:29 [INFO/MainProcess]   Step 5. Put passenger paths on transit vehicles to get vehicle boards/alights/load and assess capacity constraints\n",
+      "2017-05-04 13:16:29 [INFO/MainProcess]   Step 5.1 Put passengers on transit vehicles.\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess]   Step 6. Update dwell and travel times for transit vehicles\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess]   No more path choices to make => Ending simulation loop\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] Wrote pathset_paths_df dataframe to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/pathset_paths.csv\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] Wrote pathset_links_df dataframe to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/pathset_links.csv\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] Wrote chosen_links_df dataframe to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/chosenpaths_links.csv\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] Wrote chosen_paths_df dataframe to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/chosenpaths_paths.csv\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] Appended veh_trips_df dataframe to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/veh_trips.csv\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] \n",
+      "2017-05-04 13:16:30 [INFO/MainProcess]   Length of trip list:                1\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess]   Number of pathsets found:           1\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess]   ARRIVED PASSENGERS:                 1\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess]   MISSED PASSENGERS:                  0\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess]   CAPACITY GAP:                 0.00000\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] ***************************** ITERATION 1 PATHFINDING ITERATION 2 **************************************\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] **************************** GENERATING PATHS **********************************************************\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] Finding paths for trips for those that haven't arrived yet\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] Finding pathsets for 0 trips\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] No rows of pathset_paths_df dataframe to write to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/pathsfound_paths.csv\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] No rows of pathset_links_df dataframe to write to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/pathsfound_links.csv\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] No rows of performance_df dataframe to write to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/ft_output_performance.csv\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] Appended veh_trips_df dataframe to /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial/tta/output/test_simplenet_noOverlap/veh_trips.csv\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess] \n",
+      "2017-05-04 13:16:30 [INFO/MainProcess]   Length of trip list:                1\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess]   Number of pathsets found:           1\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess]   ARRIVED PASSENGERS:                 1\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess]   MISSED PASSENGERS:                  0\n",
+      "2017-05-04 13:16:30 [INFO/MainProcess]   CAPACITY GAP:                 0.00000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'capacity_gap': 0.0,\n",
+       " 'passengers_arrived': 1,\n",
+       " 'passengers_demand': 1,\n",
+       " 'passengers_missed': 0,\n",
+       " 'paths_found': 1}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Run.run_fasttrips(input_net_dir    = INPUT_NETWORKS,\n",
+    "Run.run_fasttrips(input_network_dir    = INPUT_NETWORKS,\n",
     "                  input_demand_dir = INPUT_DEMAND,\n",
     "                  run_config       = RUN_CONFIG,\n",
     "                  input_weights    = INPUT_WEIGHTS,\n",
