--- a/Tutorial #2 - Simple Network, Single Trip, Adjust Overlap and Dispersion.ipynb
+++ b/Tutorial #2 - Simple Network, Single Trip, Adjust Overlap and Dispersion.ipynb
@@ -638,7 +638,7 @@
    "source": [
     "for d in DISPERSION_TESTS:\n",
     "    OUTPUT_FOLDER    = OUTPUT_FOLDER_BASE+\"%2.2f\" % (d)\n",
-    "    Run.run_fasttrips(input_net_dir    = INPUT_NETWORKS,\n",
+    "    Run.run_fasttrips(input_network_dir    = INPUT_NETWORKS,\n",
     "                  input_demand_dir = INPUT_DEMAND,\n",
     "                  run_config       = RUN_CONFIG,\n",
     "                  input_weights    = INPUT_WEIGHTS,\n",
@@ -1773,7 +1773,7 @@
     "    OUTPUT_FOLDER         = OUTPUT_FOLDER_BASE+\"%s\" % (o)\n",
     "    OVERLAP_SPLIT_TRANSIT = False\n",
     "\n",
-    "    Run.run_fasttrips(input_net_dir     = INPUT_NETWORKS,\n",
+    "    Run.run_fasttrips(input_network_dir     = INPUT_NETWORKS,\n",
     "                  input_demand_dir      = INPUT_DEMAND,\n",
     "                  output_dir            = OUTPUT_DIR,\n",
     "                  output_folder         = OUTPUT_FOLDER,\n",
@@ -2188,9 +2188,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:Fast-Trips]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-env-Fast-Trips-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
