Renumber/name notebooks; fix path issues; fix pathweights

--- a/Tutorial #1 - Simple Network, Single Trip.ipynb
+++ b/Tutorial #1 - Simple Network, Single Trip.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "You can install all the dependencies by importing the virtual environment `ft_tutorial.yml` that is included this git repository.\n",
     "\n",
-    "To run each cell, highlight the cell and use shift-click."
+    "To run each cell, highlight the cell and use shift-enter."
    ]
   },
   {
@@ -42,6 +42,7 @@
    },
    "outputs": [],
    "source": [
+    "BASE_DIR         = r\"PUT YOUR PATH TO THE TUTORIAL DIRECTORY HERE!\"\n",
     "BASE_DIR         = r\"/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial\"\n",
     "INPUT_NETWORKS   = os.path.join(BASE_DIR, r\"tta/input/network-simple\")\n",
     "INPUT_DEMAND     = os.path.join(BASE_DIR, r\"tta/input/demand-single\")\n"
@@ -123,6 +124,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameters and Run Configurations\n",
+    "Let's look at the parameter files and run configurations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "INPUT_WEIGHTS    = os.path.join(BASE_DIR,\"tta\",\"input\",\"demand-single\",\"pathweight_ft.txt\")\n",
+    "RUN_CONFIG       = os.path.join(BASE_DIR, r\"tta\",\"input\",\"demand-single\",\"config_ft.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Parameters File:**  `pathweights_ft.txt`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -130,14 +158,70 @@
    },
    "outputs": [],
    "source": [
-    "INPUT_WEIGHTS    = os.path.join(BASE_DIR, r\"tta/input/demand-single/pathweight_ft.txt\")\n",
-    "RUN_CONFIG       = os.path.join(BASE_DIR, r\"tta/input/demand-single/config_ft.txt\")\n",
-    "OUTPUT_FOLDER    = r\"test_simplenet_noOverlap\"\n",
-    "OUTPUT_DIR       = os.path.join(BASE_DIR, r\"tta/output\")\n",
-    "ITERATIONS       = 1\n",
-    "PATHFINDING_TYPE = \"stochastic\"\n",
-    "OVERLAP          = \"None\"\n",
-    "DISPERSION       = 0.5"
+    "pathweights_df = pd.read_csv(INPUT_WEIGHTS)\n",
+    "pathweights_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Run Config File:**  `config_ft.txt`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(RUN_CONFIG, 'r') as myfile:\n",
+    "    contents=myfile.read()\n",
+    "print contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fast-Trips can be run with the Run.run_fasttrips command which is a wrapper function that runs:\n",
+    "  * `ft = Run.run_setup()`\n",
+    "  * `ft.run_setup()`\n",
+    "  * `ft.runassignment()`\n",
+    "\n",
+    "There are six required inputs:\n",
+    "\n",
+    "  * `input_network_dir`\n",
+    "  * `input_denand_dir`\n",
+    "  * `run_config`\n",
+    "  * `input_weights`\n",
+    "  * `output_dir`\n",
+    "  * `pathfinding_type`\n",
+    "  * `iters`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print Run.run_fasttrips.__doc__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print Run.run_setup.__doc__"
    ]
   },
   {
@@ -152,38 +236,17 @@
     "                  input_demand_dir = INPUT_DEMAND,\n",
     "                  run_config       = RUN_CONFIG,\n",
     "                  input_weights    = INPUT_WEIGHTS,\n",
-    "                  output_dir       = OUTPUT_DIR,\n",
-    "                  output_folder    = OUTPUT_FOLDER,\n",
-    "                  pathfinding_type = PATHFINDING_TYPE,\n",
-    "                  iters            = ITERATIONS,\n",
-    "                  overlap_variable = OVERLAP,\n",
-    "                  dispersion       = DISPERSION)"
+    "                  output_dir       = os.path.join(BASE_DIR,\"tta\",\"output\"),\n",
+    "                  iters            = 1,\n",
+    "                  output_folder    = \"test_simplenet_noOverlap\",\n",
+    "                  dispersion       = 0.5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Examine Results\n",
-    "\n",
-    "We use [`Bokeh`](http://bokeh.pydata.org/) to examine the results.  Bokeh is a python wrapper on the popular [`D3.js`](https://d3js.org/).  \n",
-    "\n",
-    "**Tip**: Sometimes Bokeh is ornery and doesn't play nice.  Usually re-importing it using command below will do the trick."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from bokeh.charts import Bar, Histogram, TimeSeries, output_file, Line\n",
-    "from bokeh.models import ColumnDataSource\n",
-    "from bokeh.io import push_notebook, show, output_notebook\n",
-    "from bokeh.plotting import figure\n",
-    "output_notebook()"
+    "# Examine Results"
    ]
   },
   {
@@ -207,7 +270,8 @@
     "                                       sep=\",\", \n",
     "                                       parse_dates=['arrival_time', 'departure_time'],\n",
     "                                       date_parser=lambda x: datetime.datetime.strptime(x, '%H:%M:%S') )\n",
-    "vehicles_df"
+    "vehicles_with_boardings_df=vehicles_df[vehicles_df[\"onboard\"]>0]\n",
+    "vehicles_with_boardings_df[['iteration','pathfinding_iteration','arrival_time','departure_time','route_id','trip_id','stop_id','boards','onboard','standees']]"
    ]
   },
   {
@@ -216,12 +280,10 @@
     "collapsed": false
    },
    "source": [
-    "## Plot ridership by Trip\n",
-    "As you can see from examining the vehicle trips file, there were two iterations.  One, `iteration==0` was a seed iteration.  Let's look at the results from the following one, `iteration==1`. \n",
+    "## Plot Ridership by Trip\n",
+    "As you can see from examining the vehicle trips file, there were two pathfinding iterations, which will be discussed in a later tutorial.  Let's look at the results from the following one, `pathfinding_iteration==1`. \n",
     "\n",
-    "In this case, there is only one pathfinding iteration [ discussed more in Tutorial 3 ] but we will screen to look at the final one for the purposes of practice.\n",
-    "\n",
-    "The resulting plot is not very interesting, since we just sent one trip through, but you can see that they took Trip B2 followed by G2."
+    "The resulting plot is not very interesting, since we just sent one trip through, but you can see that they took Trip B2 followed by G3."
    ]
   },
   {
@@ -232,19 +294,19 @@
    },
    "outputs": [],
    "source": [
-    "max_iteration     = vehicles_df['iteration'].max()\n",
-    "max_pf_iteration  = vehicles_df['pathfinding_iteration'].max()\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
-    "final_vehicles_df = vehicles_df[(vehicles_df['iteration'] == max_iteration) & (vehicles_df['pathfinding_iteration']==max_pf_iteration)]\n",
-    "\n",
-    "tooltips=[\n",
-    "    ('Trip ID', '@trip_id'),\n",
-    "]\n",
-    "\n",
-    "all_lines  = Bar(final_vehicles_df, \"route_id\", values='boards', stack='trip_id',title=\"Boardings by Route\",legend=False,\n",
-    "            xlabel=\"Route ID\", ylabel=\"Boardings\",tooltips=tooltips)\n",
-    "\n",
-    "ridership = show(all_lines, notebook_handle=True)"
+    "sns.set(style=\"whitegrid\")\n",
+    "fig, axs = plt.subplots(nrows=1,figsize=(8,4))\n",
+    "sns.barplot(ax=axs, x=\"trip_id\", \n",
+    "            order=[\"B1\",\"B2\",\"B3\",\"G1\",\"R1\",\"G2\",\"R2\",\"G3\",\"G4\"],\n",
+    "            y=\"boards\", hue=\"route_id\",  \n",
+    "            estimator=sum, \n",
+    "            ci=None, \n",
+    "            data=vehicles_with_boardings_df[vehicles_with_boardings_df[\"pathfinding_iteration\"]==1])\n",
+    "axs.set_title('Ridership by Trip', fontsize=24,color=\"Gray\")"
    ]
   },
   {
@@ -267,6 +329,31 @@
    "source": [
     "### Links on Chosen Path\n",
     "Links represent a segment of the path using a single transit `trip_id` or access, egress, or transfer linkmode.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "We use [`Bokeh`](http://bokeh.pydata.org/) to examine the results.  Bokeh is a python wrapper on the popular [`D3.js`](https://d3js.org/).  \n",
+    "\n",
+    "**Tip**: Sometimes Bokeh is ornery and doesn't play nice.  Usually re-importing it using command below will do the trick."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from bokeh.charts import Bar, Histogram, TimeSeries, output_file, Line\n",
+    "from bokeh.models import ColumnDataSource\n",
+    "from bokeh.io import push_notebook, show, output_notebook\n",
+    "from bokeh.plotting import figure\n",
+    "output_notebook()"
    ]
   },
   {
@@ -501,6 +588,18 @@
     "##TODO make each path start at a grid line so you can evaluate cost easier\n",
     "\n",
     "show(choiceplot, notebook_handle=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## QUESTION\n",
+    "**Question 1a:** What is the best route according to Tuffie?\n",
+    "\n",
+    "**Question 1b:** What drives it being the best?"
    ]
   },
   {
