--- a/Tutorial #2 - Capacity Constraint and Iterations.ipynb
+++ b/Tutorial #2 - Capacity Constraint and Iterations.ipynb
@@ -35,13 +35,15 @@
    },
    "outputs": [],
    "source": [
+    "##REPLACE THIS WITH THE PLACE YOUR TTA FOLDER IS\n",
+    "BASE_DIR         = r\"YOUR PATH TO THE TUTORIAL DIRECTORY\"\n",
     "BASE_DIR         = r\"/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial\"\n",
     "\n",
-    "INPUT_NETWORKS   = os.path.join(BASE_DIR, r\"tta/input/network-simple\")\n",
-    "INPUT_DEMAND     = os.path.join(BASE_DIR, r\"tta/input/demand-bigger\")\n",
+    "INPUT_NETWORKS   = os.path.join(BASE_DIR,\"tta\",\"input\",\"network-simple\")\n",
+    "INPUT_DEMAND     = os.path.join(BASE_DIR,\"tta\",\"input\",\"demand-bigger\")\n",
     "\n",
-    "RUN_CONFIG       = os.path.join(BASE_DIR, r\"tta/input/demand-bigger/config_ft.txt\")\n",
-    "INPUT_WEIGHTS    = os.path.join(BASE_DIR, r\"tta/input/demand-bigger/pathweight_ft.txt\")"
+    "RUN_CONFIG       = os.path.join(BASE_DIR,\"tta\", \"input\",\"demand-bigger\",\"config_ft.txt\")\n",
+    "INPUT_WEIGHTS    = os.path.join(BASE_DIR,\"tta\", \"input\",\"demand-bigger\",\"pathweight_ft.txt\")"
    ]
   },
   {
@@ -87,13 +89,32 @@
    },
    "outputs": [],
    "source": [
-    "OUTPUT_FOLDER    = r\"capacity-demand\"\n",
-    "OUTPUT_DIR       = os.path.join(BASE_DIR, \"output\")\n",
-    "ITERATIONS       = 3\n",
-    "PATHFINDING_TYPE = \"stochastic\"\n",
-    "OVERLAP          = \"count\"\n",
-    "CAPACITY         = True\n",
-    "DISPERSION       = 0.5"
+    "pathweights_df = pd.read_csv(INPUT_WEIGHTS)\n",
+    "pathweights_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run Fast-Trips with Capacity Constraint\n",
+    "\n",
+    "Note the following arguments:\n",
+    "\n",
+    "  * `capacity = True ` \n",
+    "  * `iters    = 3`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "OUTPUT_DIR   = os.path.join(BASE_DIR,\"tta\",\"output\")\n",
+    "OUTPUT_FOLDER = \"capacity-demand\""
    ]
   },
   {
@@ -104,17 +125,16 @@
    },
    "outputs": [],
    "source": [
-    "Run.run_fasttrips(input_network_dir    = INPUT_NETWORKS,\n",
+    "Run.run_fasttrips(input_network_dir= INPUT_NETWORKS,\n",
     "                  input_demand_dir = INPUT_DEMAND,\n",
     "                  run_config       = RUN_CONFIG,\n",
     "                  input_weights    = INPUT_WEIGHTS,\n",
     "                  output_dir       = OUTPUT_DIR,\n",
     "                  output_folder    = OUTPUT_FOLDER,\n",
-    "                  pathfinding_type = PATHFINDING_TYPE,\n",
-    "                  iters            = ITERATIONS,\n",
-    "                  overlap_variable = OVERLAP,\n",
-    "                  dispersion       = DISPERSION,\n",
-    "                  capacity         = CAPACITY)"
+    "                  iters            = 3,\n",
+    "                  overlap_variable = \"count\",\n",
+    "                  dispersion       = 0.5,\n",
+    "                  capacity         = True)"
    ]
   },
   {
@@ -148,13 +168,14 @@
    "outputs": [],
    "source": [
     "pd.set_option('display.max_colwidth',160) \n",
-    "full_output_directory=os.path.join(OUTPUT_DIR,OUTPUT_FOLDER)\n",
-    "vehicles_df = pd.read_csv(os.path.join(full_output_directory,\"veh_trips.csv\"), \n",
+    "\n",
+    "vehicles_df = pd.read_csv(os.path.join(OUTPUT_DIR,OUTPUT_FOLDER,\"veh_trips.csv\"), \n",
     "                                       sep=\",\", \n",
     "                                       parse_dates=['arrival_time', 'departure_time'],\n",
     "                                       date_parser=lambda x: datetime.datetime.strptime(x, '%H:%M:%S') )\n",
     "\n",
-    "vehicles_df[['iteration','pathfinding_iteration','arrival_time','departure_time','route_id','trip_id','stop_id','boards','onboard','standees']]"
+    "vehicles_with_boardings_df=vehicles_df[vehicles_df[\"onboard\"]>0]\n",
+    "vehicles_with_boardings_df[['iteration','pathfinding_iteration','arrival_time','departure_time','route_id','trip_id','stop_id','boards','onboard','standees']]"
    ]
   },
   {
@@ -227,13 +248,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "PATHS  = r\"pathset_paths.csv\"\n",
-    "\n",
-    "pathset_paths_df = pd.read_csv(os.path.join(full_output_directory,PATHS), sep=\",\")\n",
+    "pathset_paths_df = pd.read_csv(os.path.join(OUTPUT_DIR,OUTPUT_FOLDER,\"pathset_paths.csv\"), sep=\",\")\n",
     "pd.set_option('display.max_colwidth',160) #widen so you can see whole description"
    ]
   },
@@ -321,20 +340,20 @@
    },
    "outputs": [],
    "source": [
-    "INPUT_NETWORKS_NEW_ROUTE   = os.path.join(BASE_DIR, r\"tta/input/network-added-route\")\n",
+    "INPUT_NETWORKS_NEW_ROUTE   = os.path.join(BASE_DIR,\"tta\",\"input\",\"network-added-route\")\n",
+    "OUTPUT_DIR   = os.path.join(BASE_DIR,\"tta\",\"output\")\n",
     "OUTPUT_FOLDER_NEW_ROUTE    = r\"capacity-demand-wNewRoute\"\n",
     "\n",
-    "Run.run_fasttrips(input_network_dir    = INPUT_NETWORKS_NEW_ROUTE,\n",
+    "Run.run_fasttrips(input_network_dir= INPUT_NETWORKS_NEW_ROUTE,\n",
     "                  input_demand_dir = INPUT_DEMAND,\n",
     "                  run_config       = RUN_CONFIG,\n",
     "                  input_weights    = INPUT_WEIGHTS,\n",
     "                  output_dir       = OUTPUT_DIR,\n",
     "                  output_folder    = OUTPUT_FOLDER_NEW_ROUTE,\n",
-    "                  pathfinding_type = PATHFINDING_TYPE,\n",
-    "                  iters            = ITERATIONS,\n",
-    "                  overlap_variable = OVERLAP,\n",
-    "                  dispersion       = DISPERSION,\n",
-    "                  capacity         = CAPACITY)\n",
+    "                  iters            = 3,\n",
+    "                  overlap_variable = \"count\",\n",
+    "                  dispersion       = 0.5,\n",
+    "                  capacity         = True)\n",
     "\n"
    ]
   },
