Change order of Tutorials

--- a/Tutorial #4 - Create Your Own.ipynb
+++ b/Tutorial #4 - Create Your Own.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Fast-Trips Tutorial 5: Your own city!\n"
+    "##### Fast-Trips Tutorial 4: Your own city!\n"
    ]
   },
   {
@@ -28,13 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "GTFS_LOC = r\"/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/GoRaleigh_GTFS_0\""
+    "## UPDATE WITH YOUR OWN LOCATION\n",
+    "BASE_DIR = r\"/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2\"\n",
+    "\n",
+    "GTFS_LOC = r\"/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/GoRaleigh_GTFS_0\"\n",
+    "## read from HTTP"
    ]
   },
   {
@@ -315,7 +319,7 @@
    },
    "outputs": [],
    "source": [
-    "OUTPUT_DIR      = r\"/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/GoRaleigh_GTFS_PLUS\"\n",
+    "OUTPUT_DIR      = os.path.join(BASE_DIR,\"GoRaleigh_GTFS_PLUS\")\n",
     "DEFAULT_MODE    = \"local_bus\"\n",
     "DEFAULT_VEHICLE = \"standard_bus\"\n",
     "SEATED_CAPACITY   = 30\n",
@@ -539,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -548,7 +552,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2017-05-10 00:34:25 [INFO/MainProcess] Reading configuration file /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/GoRaleigh_GTFS_PLUS/config_ft.txt\n"
+      "2017-05-10 00:36:04 [INFO/MainProcess] Reading configuration file /Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/GoRaleigh_GTFS_PLUS/config_ft.txt\n"
      ]
     },
     {
