Fix OUTPUT_DIR and OUTPUT_FOLDER

--- a/Tutorial #1 - Simple Network, Single Trip.ipynb
+++ b/Tutorial #1 - Simple Network, Single Trip.ipynb
@@ -43,9 +43,9 @@
    "outputs": [],
    "source": [
     "BASE_DIR         = r\"PUT YOUR PATH TO THE TUTORIAL DIRECTORY HERE!\"\n",
-    "BASE_DIR         = r\"/Users/elizabeth/Documents/urbanlabs/MTC/SHRP2/tutorial\"\n",
+    "\n",
     "INPUT_NETWORKS   = os.path.join(BASE_DIR, r\"tta/input/network-simple\")\n",
-    "INPUT_DEMAND     = os.path.join(BASE_DIR, r\"tta/input/demand-single\")\n"
+    "INPUT_DEMAND     = os.path.join(BASE_DIR, r\"tta/input/demand-single\")"
    ]
   },
   {
@@ -232,13 +232,15 @@
    },
    "outputs": [],
    "source": [
+    "OUTPUT_DIR    = os.path.join(BASE_DIR,\"tta\",\"output\")\n",
+    "OUTPUT_FOLDER = \"test_simplenet_noOverlap\"\n",
     "Run.run_fasttrips(input_network_dir= INPUT_NETWORKS,\n",
     "                  input_demand_dir = INPUT_DEMAND,\n",
     "                  run_config       = RUN_CONFIG,\n",
     "                  input_weights    = INPUT_WEIGHTS,\n",
-    "                  output_dir       = os.path.join(BASE_DIR,\"tta\",\"output\"),\n",
+    "                  output_dir       = OUTPUT_DIR,\n",
     "                  iters            = 1,\n",
-    "                  output_folder    = \"test_simplenet_noOverlap\",\n",
+    "                  output_folder    = OUTPUT_FOLDER,\n",
     "                  dispersion       = 0.5)"
    ]
   },
