Add simulation iteration
Also drop dupes for rejected persons

--- a/Tutorial #2 - Capacity Constraint and Iterations.ipynb
+++ b/Tutorial #2 - Capacity Constraint and Iterations.ipynb
@@ -134,7 +134,8 @@
     "                  iters            = 3,\n",
     "                  overlap_variable = \"count\",\n",
     "                  dispersion       = 0.5,\n",
-    "                  capacity         = True)"
+    "                  capacity         = True,\n",
+    "                  output_pathset_per_sim_iter = True)"
    ]
   },
   {
@@ -173,6 +174,8 @@
     "                                       sep=\",\", \n",
     "                                       parse_dates=['arrival_time', 'departure_time'],\n",
     "                                       date_parser=lambda x: datetime.datetime.strptime(x, '%H:%M:%S') )\n",
+    "# dump intermediate simulation_iteration results\n",
+    "vehicles_df = vehicles_df.loc[vehicles_df[\"simulation_iteration\"]==\"final\"]\n",
     "\n",
     "vehicles_with_boardings_df=vehicles_df[vehicles_df[\"onboard\"]>0]\n",
     "vehicles_with_boardings_df[['iteration','pathfinding_iteration','arrival_time','departure_time','route_id','trip_id','stop_id','boards','onboard','standees']]"
@@ -265,7 +268,7 @@
    "outputs": [],
    "source": [
     "mswuf = pathset_paths_df[pathset_paths_df['person_id']=='Mrs. Wuf']\n",
-    "mswuf[['person_id','iteration','pathfinding_iteration','pathnum','probability','chosen','description']]"
+    "mswuf[['person_id','iteration','pathfinding_iteration','simulation_iteration','pathnum','probability','chosen','description']]"
    ]
   },
   {
@@ -290,7 +293,7 @@
    "outputs": [],
    "source": [
     "carlos = pathset_paths_df[pathset_paths_df['person_id']=='Carlos Boozer']\n",
-    "carlos[['person_id','iteration','pathfinding_iteration','pathnum','probability','chosen','description']]"
+    "carlos[['person_id','iteration','pathfinding_iteration','simulation_iteration','pathnum','probability','chosen','description']]"
    ]
   },
   {
@@ -310,9 +313,10 @@
    "outputs": [],
    "source": [
     "rejected_persons_df = pathset_paths_df[pathset_paths_df['chosen']=='rejected']\n",
-    "rejected_persons_df = rejected_persons_df[['person_id']]\n",
-    "rejected_persons_paths_df = pd.merge(pathset_paths_df, rejected_persons_df, on=['person_id'], how='inner')\n",
-    "rejected_persons_paths_df[['person_id','iteration','pathfinding_iteration','pathnum','probability','chosen','description']]"
+    "rejected_persons_df = rejected_persons_df[['person_id']].drop_duplicates()\n",
+    "\n",
+    "rejected_persons_paths_df = pd.merge(pathset_paths_df, rejected_persons_df, on=['person_id'])\n",
+    "rejected_persons_paths_df[['person_id','iteration','pathfinding_iteration','simulation_iteration','pathnum','probability','chosen','description']]"
    ]
   },
   {
@@ -353,7 +357,8 @@
     "                  iters            = 3,\n",
     "                  overlap_variable = \"count\",\n",
     "                  dispersion       = 0.5,\n",
-    "                  capacity         = True)\n",
+    "                  capacity         = True,\n",
+    "                  output_pathset_per_sim_iter = True)\n",
     "\n"
    ]
   },
