Let os.path.join make paths

--- a/Tutorial #1 - Simple Network, Single Trip.ipynb
+++ b/Tutorial #1 - Simple Network, Single Trip.ipynb
@@ -44,8 +44,8 @@
    "source": [
     "BASE_DIR         = r\"PUT YOUR PATH TO THE TUTORIAL DIRECTORY HERE!\"\n",
     "\n",
-    "INPUT_NETWORKS   = os.path.join(BASE_DIR, r\"tta/input/network-simple\")\n",
-    "INPUT_DEMAND     = os.path.join(BASE_DIR, r\"tta/input/demand-single\")"
+    "INPUT_NETWORKS   = os.path.join(BASE_DIR, \"tta\",\"input\",\"network-simple\")\n",
+    "INPUT_DEMAND     = os.path.join(BASE_DIR, \"tta\",\"input\",\"demand-single\")"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "outputs": [],
    "source": [
     "INPUT_WEIGHTS    = os.path.join(BASE_DIR,\"tta\",\"input\",\"demand-single\",\"pathweight_ft.txt\")\n",
-    "RUN_CONFIG       = os.path.join(BASE_DIR, r\"tta\",\"input\",\"demand-single\",\"config_ft.txt\")"
+    "RUN_CONFIG       = os.path.join(BASE_DIR,\"tta\",\"input\",\"demand-single\",\"config_ft.txt\")"
    ]
   },
   {
